{{$NEXT}}
  - Added EXPERIMENTAL sequence option to enqueue method and sequences option to list_jobs method
    to support job sequences.
  - Added next and previous fields to list_jobs method.

v5.0.1    2020-06-17 23:20:46 EDT
  - Fixed tests to be less sensitive to error message contents.

v5.0.0    2020-06-17 01:22:45 EDT
  - Minion requirement bumped to 10.03.
  - Changed reset method to require options for what to reset and allow for
    locks to be reset without resetting the whole queue.
  - Added before options to list_jobs and list_workers methods to support
    iterating jobs and workers.

4.005     2019-08-05 11:00:01 EDT
  - Allow fields to be removed with note method.

4.004     2019-07-09 00:53:20 EDT
  - Add time field to list_jobs method.

4.003     2019-06-21 18:06:07 EDT
  - Ignore missing workers for jobs in the minion_foreground named queue to
    make debugging very slow jobs easier.

4.002     2018-10-03 13:58:15 EDT
  - Optimize repair query (yrjustice, #15, #16)

4.001     2018-04-21 19:29:24 EDT
  - Implement EXPERIMENTAL history method used for Minion Admin plugin history graph.

4.000     2018-04-16 14:58:35 EDT
  - Minion requirement bumped to 9.0.
  - Replace queue, state, and task options of list_jobs method with queues,
    states, and tasks options.
  - Replace name option of list_locks method with names option.
  - Replace key/value arguments of note method with a hash reference.
  - Add parents option to retry_job method.
  - Re-add active_locks stats field.

3.003     2017-12-10 16:00:33 EST
  - Remove active_locks stats field as it was incorrect.
  - Fix list_locks to exclude already expired locks.

3.002     2017-12-09 21:42:19 EST
  - Add list_locks method.
  - Add active_locks field to stats.

3.001     2017-11-28 21:57:15 EST
  - Fix condition in dequeue that could lead to calling usleep with a negative
    time. (toratora, #12)

3.000     2017-11-17 20:20:58 EST
  - Minion requirement bumped to 8.0.