@@ -39,7 +39,7 @@
       "runtime" : {
          "requires" : {
             "List::Util" : "0",
-            "Minion" : "10.03",
+            "Minion" : "10.10",
             "Mojo::SQLite" : "3.000",
             "Mojolicious" : "7.29",
             "Sys::Hostname" : "0",
